replace case management team with sanctuary mailbox

--- a/user-guide.html
+++ b/user-guide.html
@@ -1735,22 +1735,22 @@
             <h4>If the person is leaving Wales</h4>
             <ol>
                 <li>Establish the location within the UK where the Ukrainian has identified the new host </li>
-                <li>Contact the Case Management Team <a href="mailto:casemanagementteam@cardiff.gov.uk">casemanagementteam@cardiff.gov.uk</a> with all relevant details of the transfer request </li>
-                <li>The Case Management Team will contact the onward Local Authority and submit the request via Foundry, if accepted they will confirm back to the Welsh Local Authority once Foundry has been updated </li>
+                <li>Contact the National Advisory Service <a href="mailto:support@sanctuary.gov.wales">support@sanctuary.gov.wales</a> with all relevant details of the transfer request </li>
+                <li>The National Advisory Service will contact the onward Local Authority and submit the request via Foundry, if accepted they will confirm back to the Welsh Local Authority once Foundry has been updated </li>
                 <li>Ensure the <a href="#using-case-notes">case notes</a> record that the onward destination local authority has agreed to the transfer.</li>
                 <li>Update the move on reason of the household’s existing placement.</li>
                 <li><a href="#creating-placement-record">Create a new placement record</a> for 'move on accomodation'providing their new cross border address and date of transfer. If this is not possible, add the country to which they are moving to.</li>
                 <li>Select either (England), (Northern Ireland) or (Outside of UK) within the Local Authority mandatory field. </li>
             </ol> 
             <p><b>Scotland does not currently use Foundry so this process will not be applicable to those who are requesting to leave the country to live in Scotland.</b></p>  
-            <p>Selecting (England), (Northern Ireland), or (Outside of UK) ensures you can correctly assign an individual when they have moved outside of Wales and remove the records from your local authority view. However, it will not transfer records out of the data platform to cross border systems.  Updating cross border systems such as Foundry will be completed separately by the case management team.</p>
+            <p>Selecting (England), (Northern Ireland), or (Outside of UK) ensures you can correctly assign an individual when they have moved outside of Wales and remove the records from your local authority view. However, it will not transfer records out of the data platform to cross border systems.  Updating cross border systems such as Foundry will be completed separately by the national advisory service.</p>
             <p>Once the Data has been passed to the receiving LA, Within the applicant summary page under case notes and activities, once the data has arrived onto the Data Platform, the Reassignment/Cross Border Move on will be toggled to YES.  This is a locked field and is for information purposes only to show those individuals who have been reassigned across UK Nations.</p>
             <img src="assets/images/reassignment-crossborder23.png" alt="Reassignment/Cross Border Move On toggle greyed out as yes" height="60%" width="60%">           
             <h4>If the person is moving into Wales with advanced notice</h4>
             <p>These are requests sent for re-assignment to Wales via Foundry with notice prior to any travel arrangements being made.</p>
-            <p>When a local authority from outside of Wales sends a re-assignment request to Wales via Foundry, the Case Management Team will receive and discuss the request with the relevant Welsh Local Authority. If the Welsh Local Authority accepts the process will be as follows:</p>
+            <p>When a local authority from outside of Wales sends a re-assignment request to Wales via Foundry, the National Advisory Service will receive and discuss the request with the relevant Welsh Local Authority. If the Welsh Local Authority accepts the process will be as follows:</p>
             <ol>
-                <li>The Case Management Team will accept the request on Foundry and gain access to the data </li>
+                <li>The National Advisory Service will accept the request on Foundry and gain access to the data </li>
                 <li>The data will flow into the Ukraine Data Platform – please note there may be a time lag </li>
                 <li>Within the data platform, you will need to:
                     <ol type="a">
@@ -1762,7 +1762,7 @@
                         <li>Set the reservation status to RS07 - Move on match complete</li>
                         <li>Set the start date as the first day of the new placement (once confirmed with both parties)</li>
                         <li>Click Save or Save & Close.</li>
-                        <li>Ensure the <a href="#using-case-notes">case notes</a> record the transfer has been agreed and include any information received from the Case Management Team</li>
+                        <li>Ensure the <a href="#using-case-notes">case notes</a> record the transfer has been agreed and include any information received from the National Advisory Service</li>
 
                     </ol>
                 </li>
@@ -1773,8 +1773,8 @@
             <h4>If the person has moved into Wales and we find out retrospectively</h4>
             <p>These are instances where a Local Authority has identified that a Ukrainian has already arrived in Wales with no advance notice of travel.  The receiving Welsh Local Authority will need to follow the below process:</p>
             <ol>
-                <li>Contact the Case Management Team <a href="mailto:casemanagementteam@cardiff.gov.uk">casemanagementteam@cardiff.gov.uk</a> and ask them to raise a re-assignment request on Foundry</li>
-                <li>The Case Management Team will contact the original Local Authority and if the request is accepted will arrange for the information to be sent over</li>
+                <li>Contact the National Advisory Service <a href="mailto:support@sanctuary.gov.wales">support@sanctuary.gov.wales</a> and ask them to raise a re-assignment request on Foundry</li>
+                <li>The National Advisory Service will contact the original Local Authority and if the request is accepted will arrange for the information to be sent over</li>
                 <li>The data will flow into the Ukraine Data Platform – please note there may be a time lag </li>
                 <li>Within the data platform, you will need to:
                     <ol type="a">
@@ -1786,7 +1786,7 @@
                         <li>Set the reservation status to RS04 - Move on match complete</li>
                         <li>Set the start date as the first day of the new placement (once confirmed with receiiving LA)</li>
                         <p>Click Save or Save & Close</p>
-                        <li>Ensure the <a href="#using-case-notes">case notes</a> record the transfer has been agreed and include any information received from the Case Management Team</li>
+                        <li>Ensure the <a href="#using-case-notes">case notes</a> record the transfer has been agreed and include any information received from the National Advisory Service</li>
                     </ol>
                 </li>
             </ol>
@@ -2091,9 +2091,9 @@
                 <p><b>“Wales we have a robust system in place to ensure that once checks are completed on a local level, the LA’s will individually raise a Jira ticket to flag as fake.”</b></p>
             <li>Add a note to the Sponsor timeline explaining that the record is rejected due to being a ‘Fake Sponsor’ and include the JIRA ticket reference.</li>
             <li>Update the Sponsor/ Host Journey Status to HST005 Rejected (this will make the record inactive)</li>
-            <li>Email the contact centre case management team at casemanagementteam@cardiff.gov.uk with all relevant information including any UANS’s for the applications and the suspected host’s name. </li></ol>
-            <p>The case management team will then mark the sponsor as unsuitable on Foundry, check for any duplicates and raise any additional concerns. Should there be any further requirements/ concerns, CMT will liaise directly with the relevant LAs. </p>
-            <p>Please note: It is not the LA’s responsibility to log these cases within foundry, please pass these onto the Case Management Team.</p>
+            <li>Email the contact centre national advisory service at support@sanctuary.gov.wales with all relevant information including any UANS’s for the applications and the suspected host’s name. </li></ol>
+            <p>The national advisory service will then mark the sponsor as unsuitable on Foundry, check for any duplicates and raise any additional concerns. Should there be any further requirements/ concerns, CMT will liaise directly with the relevant LAs. </p>
+            <p>Please note: It is not the LA’s responsibility to log these cases within foundry, please pass these onto the National Advisory Service.</p>
             <h3 id="duplicate-host-no-approved" class="y-target">Duplicate Hosts with no approved applicants attached</h3>
             <p>From time to time, you may come across an additional host record.  These will usually have no linked applicants or PTs attached.</p>
             <p>It will normally show an application linked with no applicant name which suggests that the applicant has not yet been approved.</p>
@@ -2272,7 +2272,7 @@
             <p>The Nation of Sanctuary mailbox is for non-urgent platform queries only.</p>
             <p>Due to the breadth of queries that we receive through the mailbox, we will be prioritising messages relating to a technical issue, data issue or where the answer to a question  isn’t available on this site.</p>    
             <h4>Safeguarding Queries</h4>  
-            <p>For queries of safeguarding concern then Local Authorities are requested to contact their respective social services and / or legal teams for advice and assistance in the first instance. Any exceptional cases that require to be flagged to Welsh Government (WG) can be raised to the Case Management Team in the Contact Centre at <b><a href="mailto:casemanagementteam@cardiff.gov.uk">casemanagementteam@cardiff.gov.uk</a></b> who will ensure teams within WG with the appropriate expertise can respond to your concern.</p>  
+            <p>For queries of safeguarding concern then Local Authorities are requested to contact their respective social services and / or legal teams for advice and assistance in the first instance. Any exceptional cases that require to be flagged to Welsh Government (WG) can be raised to the National Advisory Service in the Contact Centre at <b><a href="mailto:support@sanctuary.gov.wales">support@sanctuary.gov.wales</a></b> who will ensure teams within WG with the appropriate expertise can respond to your concern.</p>  
             <h4>Data Queries</h4>
             <p>For queries relating to data, including missing applicant / sponsor data and identified issues with the data load please contact the <a href="mailto:nationofsanctuarysurvey@gov.wales">nationofsanctuarysurvey@gov.wales</a>.  Please do not send data queries to data@gov.wales. </p>
             <h4>Policy Queries</h4>
